--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  charts_flutter: ^0.9.0
   path_provider: ^0.4.1
   sqflite: ^1.3.0
   flutter:
